[gd_scene load_steps=3 format=3 uid="uid://duelb2q8ha7hp"]

[ext_resource type="Script" uid="uid://boon2cv8not4t" path="res://scripts/pause.gd" id="1_te3bn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uu56n"]
blend_mode = 1
light_mode = 1

[node name="PauseScreen" type="Control"]
process_mode = 3
material = SubResource("CanvasItemMaterial_uu56n")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_te3bn")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.641934, 0.641934, 0.641934, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -128.0
offset_right = 192.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.347222
anchor_top = 0.37037
anchor_right = 0.652778
anchor_bottom = 0.604938
offset_top = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 9
size_flags_stretch_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Resume"

[node name="QuitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
metadata/_edit_lock_ = true

[node name="QuitMenu" type="Button" parent="VBoxContainer/QuitContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit to Main Menu"

[node name="QuitDesktop" type="Button" parent="VBoxContainer/QuitContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0
text = "Quit to Desktop"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitContainer/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitContainer/QuitDesktop" to="." method="_on_quit_desktop_pressed"]
